removed backticks around inline-code

--- a/styles/global.css
+++ b/styles/global.css
@@ -200,3 +200,11 @@ table {
   display: block;
   overflow-y: scroll;
 }
+
+.prose code::before {
+  content: ''
+}
+
+.prose code::after {
+  content: ''
+}
