--- a/styles/global.css
+++ b/styles/global.css
@@ -81,6 +81,18 @@ html {
   @apply visible no-underline;
 }
 
+.prose h1 {
+  @apply mt-7 mb-5;
+}
+
+.prose h2 {
+  @apply mt-6 mb-4;
+}
+
+.prose h3 {
+  @apply mt-5 mb-3;
+}
+
 .prose pre {
   @apply border border-gray-200 bg-gray-50 dark:border-gray-700 dark:bg-gray-900 text-pink-500 dark:text-pink-400;
 }
