--- a/styles/global.css
+++ b/styles/global.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 ::selection {
-  background-color: #FFF5AD;
+  background-color: #fff5ad;
   color: #282828;
 }
 
@@ -27,7 +27,34 @@ html {
   }
 }
 
+.contained {
+  @apply text-black dark:text-white;
+}
+
 /* standard html tags */
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @apply tracking-tight font-bold;
+}
+
+h1 {
+  @apply text-3xl md:text-5xl mb-4;
+}
+
+p {
+  @apply prose text-gray-600 dark:text-gray-400 mb-12 mt-4;
+}
+
+a {
+  @apply prose
+  text-blue-500 hover:text-blue-400
+  dark:text-blue-400 dark:hover:text-blue-300;
+}
 
 .prose .anchor {
   @apply absolute invisible;
