--- a/styles/global.css
+++ b/styles/global.css
@@ -49,10 +49,26 @@ h1 {
   @apply text-3xl md:text-5xl;
 }
 
+p {
+  @apply text-gray-600 dark:text-gray-400;
+}
+
 a {
-  @apply prose
+  @apply 
+  underline
   text-blue-500 hover:text-blue-400
   dark:text-blue-400 dark:hover:text-blue-300;
+}
+
+/*
+ * Navbar css
+ */
+
+.navbar a {
+  @apply 
+  no-underline
+  text-gray-900 hover:bg-gray-200
+  dark:text-gray-100 dark:hover:bg-gray-700;
 }
 
 .prose .anchor {
@@ -101,12 +117,6 @@ a {
 .prose img {
   /* Don't apply styles to next/image */
   @apply m-0;
-}
-
-.prose > :first-child {
-  /* Override removing top margin, causing layout shift */
-  margin-top: 1.25em !important;
-  margin-bottom: 1.25em !important;
 }
 
 code[class*='language-'],
