--- a/styles/global.css
+++ b/styles/global.css
@@ -28,7 +28,7 @@ html {
 }
 
 .contained {
-  @apply text-black dark:text-white leading-5;
+  @apply text-gray-900 dark:text-gray-100 leading-5;
 }
 
 /* standard html tags.
@@ -42,11 +42,15 @@ h3,
 h4,
 h5,
 h6 {
-  @apply tracking-tight font-bold;
+  @apply tracking-tight font-bold text-black dark:text-white;
 }
 
 h1 {
   @apply text-3xl md:text-5xl;
+}
+
+h3 {
+  @apply text-2xl md:text-4xl 
 }
 
 p {
