--- a/styles/global.css
+++ b/styles/global.css
@@ -50,7 +50,11 @@ h1 {
 }
 
 h3 {
-  @apply text-2xl md:text-4xl 
+  @apply text-2xl md:text-4xl;
+}
+
+h4 {
+  @apply text-lg md:text-xl;
 }
 
 p {
