--- a/styles/global.css
+++ b/styles/global.css
@@ -36,9 +36,12 @@ html {
   @apply text-gray-900 dark:text-gray-100 leading-5;
 }
 
+.lighter {
+  @apply text-gray-500 dark:text-gray-400;
+}
+
 .featured-repo {
-  @apply
-  bg-gray-50 hover:bg-gray-50/90
+  @apply bg-gray-50 hover:bg-gray-50/90
   dark:bg-gray-850 dark:hover:bg-gray-800/90
   text-gray-500 dark:text-gray-300;
 }
@@ -64,26 +67,35 @@ h4 {
   @apply font-semibold text-lg md:text-xl;
 }
 
-p {
+h5 {
+  @apply font-semibold text-base md:text-lg;
+}
+
+p,
+.paragraph {
   @apply prose
   text-gray-600
   dark:text-gray-300;
 }
 
 a {
-  @apply 
-  underline
+  @apply underline
   text-blue-500 hover:text-blue-400
   dark:text-blue-400 dark:hover:text-blue-300;
+}
+
+a.footer-link {
+  @apply no-underline hover:underline
+  text-gray-500 hover:text-gray-400
+  dark:text-gray-400 hover:text-gray-500;
 }
 
 /*
  * Navbar css
  */
 
-.navbar a {
-  @apply 
-  no-underline
+.navbar, a.navbar {
+  @apply no-underline
   text-gray-900 hover:bg-gray-200
   dark:text-gray-100 dark:hover:bg-gray-700;
 }
