--- a/styles/global.css
+++ b/styles/global.css
@@ -84,17 +84,41 @@ a {
   dark:text-blue-400 dark:hover:text-blue-300;
 }
 
-a.footer-link {
+a.footer-link, a.email-link {
   @apply no-underline hover:underline
   text-gray-500 hover:text-gray-400
-  dark:text-gray-400 hover:text-gray-500;
+  dark:text-gray-400 dark:hover:text-gray-500;
+}
+
+a.tag-button,
+a.tag-clear {
+  @apply no-underline cursor-pointer
+  px-1 mx-1 rounded-md border-2
+  /* text color */
+  text-gray-500 hover:bg-gray-100 border-gray-200
+  /* dark mode */
+  dark:text-gray-400 hover:dark:bg-gray-700 dark:border-gray-800;
+}
+
+a.tag-selected {
+  @apply border-blue-400 dark:border-blue-500;
+}
+
+a.tag-clear {
+  @apply bg-blue-200 border-blue-200
+  hover:bg-blue-300 hover:border-blue-300
+  /* dark mode */
+  dark:bg-blue-700 dark:border-blue-700
+  dark:text-gray-200
+  dark:hover:bg-blue-700 dark:hover:border-blue-700;
 }
 
 /*
  * Navbar css
  */
 
-.navbar, a.navbar {
+.navbar,
+a.navbar {
   @apply no-underline
   text-gray-900 hover:bg-gray-200
   dark:text-gray-100 dark:hover:bg-gray-700;
