--- a/styles/global.css
+++ b/styles/global.css
@@ -160,11 +160,11 @@ a.navbar {
 }
 
 .prose pre {
-  @apply border border-gray-200 bg-gray-50 dark:border-gray-700 dark:bg-gray-900 text-pink-500 dark:text-pink-400;
+  @apply border border-gray-200 dark:border-gray-700 text-pink-500 dark:text-pink-400;
 }
 
 .prose code {
-  @apply text-pink-500 dark:text-pink-400 px-1 py-0.5 border border-gray-100 dark:border-gray-800 rounded-md bg-gray-100 dark:bg-gray-900;
+  @apply text-pink-500 dark:text-pink-400 px-1 py-0.5 border-gray-100 dark:border-gray-800 rounded-md;
 }
 
 .prose img {
