--- a/styles/global.css
+++ b/styles/global.css
@@ -59,15 +59,23 @@ h1 {
   @apply text-3xl md:text-5xl;
 }
 
-h3 {
+h2 {
   @apply text-2xl md:text-4xl;
 }
 
+h3 {
+  @apply text-xl md:text-3xl;
+}
+
 h4 {
-  @apply font-semibold text-lg md:text-xl;
+  @apply font-semibold text-lg md:text-2xl;
 }
 
 h5 {
+  @apply font-semibold text-base md:text-xl;
+}
+
+h6 {
   @apply font-semibold text-base md:text-lg;
 }
 
