--- a/styles/global.css
+++ b/styles/global.css
@@ -92,10 +92,17 @@ a {
   dark:text-blue-400 dark:hover:text-blue-300;
 }
 
-a.footer-link, a.email-link {
+a.footer-link,
+a.email-link {
   @apply no-underline hover:underline
   text-gray-500 hover:text-gray-400
   dark:text-gray-400 dark:hover:text-gray-500;
+}
+
+a.track-link {
+  @apply font-medium no-underline hover:underline
+  text-gray-900 dark:text-gray-100 truncate
+  w-60 sm:w-96 md:w-full;
 }
 
 a.tag-button,
