--- a/styles/global.css
+++ b/styles/global.css
@@ -179,7 +179,7 @@ a.navbar {
 }
 
 .prose code {
-  @apply text-pink-500 dark:text-pink-400 px-1 py-0.5 border-gray-100 dark:border-gray-800 rounded-md;
+  @apply not-italic font-light text-pink-500 dark:text-pink-400 px-1 py-0.5 border-gray-100 dark:border-gray-800 rounded-md;
 }
 
 .prose img {
